# Electronic-Leadscrew-2

./: .gitignore  CMakeLists.txt  Makefile  README.md
leadscrew/: CMakeLists.txt  display.c  display.h  gpio.c  gpio.h  hardware.h  intercore.c  intercore.h  leadscrew.c  leadscrew.h  main.c  main.h  motion.c  motion.h  spindle.c  spindle.h
